--- a/calories_counter/main_app/templates/main_app/catalog.html
+++ b/calories_counter/main_app/templates/main_app/catalog.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Catalog</title>
 </head>
 <body>
+    {% for category in categories%}
+
+    {% endfor %}
 
 </body>
 </html>
