--- a/calories_counter/main_app/templates/main_app/catalog.html
+++ b/calories_counter/main_app/templates/main_app/catalog.html
@@ -5,8 +5,11 @@
     <title>Catalog</title>
 </head>
 <body>
-    {% for category in categories%}
-
+    {% for category in categories %}
+        <div>
+            <img src="{{ category.photo.url }}" alt="Unavalaible">
+            <h2>{{ category.name }}</h2>
+        </div>
     {% endfor %}
 
 </body>
