--- a/calories_counter/main_app/templates/main_app/base.html
+++ b/calories_counter/main_app/templates/main_app/base.html
@@ -6,14 +6,21 @@
     <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" type="text/css" href="{% static 'assets/css/bootstrap.min.css'%}">
     <link rel="stylesheet" type="text/css" href="{% static 'assets/css/style.css'%}">
+    <script src="https://kit.fontawesome.com/5b99d4ff8a.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="header">
-
+        <ul>
+            <li><a href="{% url 'index' %}">Home</a></li>
+            <li>|</li>
+            <li><a href="{% url 'catalog' %}">Catalog</a></li>
+            <li><a href="{% url 'cart:cart_detail' %}"><i class="fa-solid fa-user"></i></a></li>
+        </ul>
     </div>
 
-    <div class="content">
+    <div class="container">
         {% block content %}
+
         {% endblock %}
     </div>
 
